--- a/wallettemplate/src/main/resources/wallettemplate/main.fxml
+++ b/wallettemplate/src/main/resources/wallettemplate/main.fxml
@@ -32,7 +32,7 @@
             <Color blue="0.750" green="0.750" red="0.750" fx:id="x2" />
           </textFill>
         </Label>
-        <Label font="$x1" text="ZYZ" textFill="$x2" />
+        <Label font="$x1" text="CPC" textFill="$x2" />
       </children>
     </HBox>
     <VBox fx:id="syncBox" maxHeight="-1.0" prefHeight="46.0" prefWidth="243.0" spacing="10.0" translateY="0.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
@@ -60,7 +60,7 @@
         </ColorAdjust>
       </effect>
       <image>
-        <Image url="@xxxxxxx_logo_plain.png" />
+        <Image url="@compcoin_logo_plain.png" />
       </image>
     </ImageView>
     <ClickableBitcoinAddress fx:id="addressControl" layoutY="45.0" prefHeight="21.0" prefWidth="391.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="195.0" />
